--- a/assets/medtrac/storec_dashboard.css
+++ b/assets/medtrac/storec_dashboard.css
@@ -11,10 +11,8 @@ background-color: var(--background);
 
 .main-container{
 display:flex;
-justify-content:space-around;
+justify-content:center;
 margin-top:20px;
-display:grid;
-grid-template-columns: repeat(3, 1fr);
 }
 
 
@@ -69,3 +67,55 @@ background-color:var(--card-header-background);
 height:28px;
 }
 
+
+tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+tr:hover {
+    background-color: #e6f7ff;
+}
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th, td {
+    border: 1px solid #B16A6A;
+    text-align: left;
+    padding: 8px;
+}
+
+th {
+    background-color: var(--card-header-background);
+}
+
+.table-box{
+display:flex;
+width:auto;
+flex-direction:column;
+height:auto;
+background:#B69B9B;
+overflow-y: auto;
+}
+
+.table-bar{
+width:100%;
+border-radius:15px;
+background: var(--tiles-background);
+}
+
+.table-box tr:nth-child(even) {
+background-color:var(--tiles-background);
+color:black;
+}
+
+.table-box tr:nth-child(odd) {
+background-color: var(--tiles-background);
+color: black;
+}
+
+.table-box tr:hover {
+    background-color: #B16A6A;
+     transform: scale(1.0);
+}
