--- a/Templates/location_dashboard.html
+++ b/Templates/location_dashboard.html
@@ -65,7 +65,17 @@
              </div>
          </div>
     </div>
+<div class="menu">
+    <div class="inner_menu">
 
+    </div>
+</div>
+<!--    <div class="side_bar">-->
+<!--        <ul>-->
+<!--            <li>avi</li>-->
+<!--            <li>sanj</li>-->
+<!--        </ul>-->
+<!--    </div>-->
     <div class = 'location-view'>
         {% for i in locations %}
             <div class = location-card>
