--- a/assets/general_apps/dashboard_styles.css
+++ b/assets/general_apps/dashboard_styles.css
@@ -99,7 +99,8 @@ width:100%;
 height:5vh;
 border-radius:10px;
 background:var(--nav_bar);
-
+position:fixed;
+z-index: 1;
 }
 
 .nav-bar button{
@@ -129,6 +130,12 @@ flex-direction:column;
 width:100%;
 justify-content:space-around;
 margin:10px;
+margin-top:50px;
+overflow-y: auto;
+height:100Vh;
+}
+.location-view ::-webkit-scrollbar{
+width:50px;
 }
 
 .header-card{
@@ -149,4 +156,13 @@ flex-direction:column;
 
 .content-card label {
 margin: 0px 0px 6px 10px;
+}
+.side_bar{
+width:
+position:fixed;
+z-index: 1;
+display:flex;
+flex-direction:column;
+justify-content : right;
+width:100%;
 }
