--- a/assets/dem/doc_manager.css
+++ b/assets/dem/doc_manager.css
@@ -36,8 +36,10 @@ align-items: center; /* Center vertically */
 .form-box{
 margin-top:2%;
 background-color:var(--tiles-background);
-padding:10px;
-width:90%;
+padding-bottom:50px;
+padding-left:50px;
+padding-right:50px;
+border-radius:10px;
 
 }
 
@@ -48,8 +50,9 @@ justify-content:center;
 border-radius:3px;
 padding:10px;
 background-color:var(--tiles-background);
-width: 90%;
 height:100%;
+width:90%;
+border-radius:10px;
 }
 
 img {
@@ -58,14 +61,22 @@ img {
 }
 .form-inputs{
 display:flex;
+align-items: flex-start;
 justify-content:space-around;
-margin-top:2%;
+margin-top:7%;
 }
 .di{
 max-height : 500px;
 max-width: 400px;
 }
 
+.form-inputs input,select{
+width : 200px;
+}
+
+.form-inputs label{
+width : 100px;
+}
 
 .cards {
 display flex;
