--- a/Templates/DocManager_form.html
+++ b/Templates/DocManager_form.html
@@ -19,6 +19,11 @@
 </div>
 
 <div class = 'main-box'>
+
+  <div class = 'loader'  id = 'loader'>
+     <img src= "{% static 'Aura_home/loading.gif' %}" alt="Description of image">
+  </div>
+
   <div class = 'photo-box'>
         <button onclick="previousImage()"><-</button>
     <div>
@@ -65,7 +70,6 @@
              <div class = 'main-pop'>
              <label >Doc Type</label>
              <input type = text id = doc_type >
-
             <button type = button onclick="add_doc_type()">add doc type</button>
                  </div>
              </div>
@@ -176,6 +180,7 @@ document.getElementById('displayedImage').style.display = 'none';
          else{
             var result = confirm("Confirm Data: Name: "+docName+" and Type: "+docType);
              if (result) {
+                document.getElementById('loader').style.display = 'flex';
                 document.getElementById('uploadForm').submit();
              }
 
@@ -223,5 +228,8 @@ document.getElementById('displayedImage').style.display = 'none';
       displayImage(currentImageIndex + 1);
     }
   }
+
+
+  document.getElementById('loader').style.display = 'none';
 </script>
 
