--- a/assets/dem/doc_manager.css
+++ b/assets/dem/doc_manager.css
@@ -183,3 +183,22 @@ justify-content: space-between;
 align-items:center;
 background: var(--tiles-background);
 }
+
+
+.loader {
+display:flex;
+align-items:center;
+justify-content:center;
+position:fixed;
+top:0;
+left:0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.7);
+}
+
+.loader img {
+height:500px;
+width:600px;
+border-radius:20px;
+}
