--- a/assets/dem/docma_viewer_styles.css
+++ b/assets/dem/docma_viewer_styles.css
@@ -182,3 +182,21 @@ background-color : #383839;
 color:white;
 }
 
+
+.loader {
+display:none;
+align-items:center;
+justify-content:center;
+position:fixed;
+top:0;
+left:0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.7);
+}
+
+.loader img {
+height:500px;
+width:600px;
+border-radius:20px;
+}
