--- a/Templates/DocManager_form.html
+++ b/Templates/DocManager_form.html
@@ -15,6 +15,7 @@
 <div class = "home">
     <a href = '/home/'>Home /</a>
     <a href = '/doc_manager/'>Document Category</a>
+    <button onclick = "test()">Test</button>
 </div>
 </div>
 
@@ -228,6 +229,10 @@ document.getElementById('displayedImage').style.display = 'none';
       displayImage(currentImageIndex + 1);
     }
   }
+
+function test(){
+document.getElementById('loader').style.display = 'flex';
+}
 
 
   document.getElementById('loader').style.display = 'none';
