--- a/assets/dem/dem_dashboard.css
+++ b/assets/dem/dem_dashboard.css
@@ -382,12 +382,13 @@ border-radius:10px;
 .popup-overlay {
 display:None;
 position:fixed;
-align-items:center;
+align-items:top;
 justify-content:center;
 top: 0;
 left: 0;
 width: 100%;
 height: 100%;
+padding-top:150px;
 background: rgba(0, 0, 0, 0.7);
 }
 
@@ -397,7 +398,7 @@ justify-content:center;
 flex-direction:column;
 background: #383839;
 width : 680px;
-height:45vh;
+height:550px;
 border-radius:10px;
 padding:10px;
 }
@@ -424,7 +425,7 @@ justify-content:space-around;
 margin-top:5px;
 background-color : #36454F;
 border-radius:10px;
-height:40vh;
+height:550px;
 font-size: 35px;
 color:var(--font_colour);
 }
