--- a/Templates/dem_dashboard.html
+++ b/Templates/dem_dashboard.html
@@ -591,7 +591,7 @@
 
 
     function home(){
-    window.location.href = domain+'/home';
+    window.location.href = domain+'home';
 
     }
 
@@ -620,10 +620,6 @@
                  if (set_budget.readOnly) {
                     set_budget.readOnly = false;
                     bud_edit.textContent = "Save";
-
-
-
-
 
                 } else {
                     set_budget.readOnly = true;
@@ -709,8 +705,8 @@
                     datasets: [{
                         label: 'Data alues',
                         data: values,
-                        backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                        borderColor: 'rgba(75, 192, 192, 1)',
+                        backgroundColor: 'rgba(75, 192, 192, 1)',
+                        borderColor:  'rgba(75, 192, 192, 0.2)',
                         borderWidth: 1
                     }]
                 },
