--- a/assets/general_apps/dashboard_styles.css
+++ b/assets/general_apps/dashboard_styles.css
@@ -117,17 +117,19 @@ font-weight:bold;
 .location-card {
 display:flex;
 flex-direction:column;
-width :250px;
-height:170px;
+width :300px;
+height:350px;
 background:var(--nav_bar);
 border-radius:10px;
 margin:10px;
+padding:10px;
 }
 
 .location-view {
 display:flex;
 flex-direction:column;
 width:100%;
+height:100%;
 justify-content:space-around;
 margin:10px;
 margin-top:50px;
@@ -143,7 +145,7 @@ display:flex;
 align-items:center;
 justify-content:space-around;
 height:23px;
-width:180px;
+width:100%;
 font-size: 20px;
 font-weight: bold;
 margin:10px;
@@ -152,6 +154,19 @@ margin:10px;
 .content-card{
 display:flex;
 flex-direction:column;
+}
+
+.card-footer{
+padding: 0px 10px 0px 10px;
+display:flex;
+justify-content:right;
+height:30px;
+}
+.card-footer button{
+height:80%;
+width:60px;
+border-radius:7px;
+margin-left:30px;
 }
 
 .content-card label {
@@ -165,4 +180,16 @@ display:flex;
 flex-direction:column;
 justify-content : right;
 width:100%;
+}
+
+
+.popup-mainheading {
+
+display:flex;
+align-items:center;
+font-size: --var(--font_cabin);
+font-size: 25px;
+font-weight: bold;
+
+
 }
