--- a/Templates/DocViewer.html
+++ b/Templates/DocViewer.html
@@ -101,7 +101,46 @@
 
 </body>
 </html>
+<STYLE>
 
+
+
+<!--.doc-card{-->
+<!--/*display:flex;-->
+<!--align-items:center;-->
+<!--justify-content:space-around;-->
+<!--height:50px;-->
+<!--width:100%;-->
+<!--margin-bottom:40px;*/-->
+
+<!--margin-top:200px;-->
+<!--display:flex;-->
+<!--align-items:center;-->
+<!--justify-content:space-around;-->
+<!--height:70px;-->
+<!--width:300px;-->
+<!--padding:10px;-->
+<!--margin-bottom:40px;-->
+<!--display:flex;-->
+<!--overflow-x:auto;-->
+<!--}-->
+
+<!--.doc-card{-->
+<!--/*height:50px;-->
+<!--width:70px;-->
+<!--border-radius:10px;*/-->
+<!--color:skyblue;-->
+<!-- background-color: Transparent;-->
+<!--  background-repeat:no-repeat;-->
+<!--  border: none;-->
+
+<!--}-->
+<!--.doc-card::-webkit-scrollbar{-->
+<!--width:0;-->
+<!--}-->
+
+
+</STYLE>
 <script>
 
     var protocol = window.location.protocol;
