--- a/Templates/docma_home.html
+++ b/Templates/docma_home.html
@@ -11,7 +11,7 @@
 <body class="page">
 <div class="nav-bar">
 
-<div class = "home">
+<div class = "homes">
     <a href = '/home/'>Home/</a>
     <a href = '/doc_manager/'>Document Category</a>
 </div>
@@ -23,10 +23,17 @@
 <div class="cards-holder">
 {% for i in doc_type %}
 <div class="doc-card">
+
    <img class = 'di' src="  {% static 'fcons.png' %}" >
     <a  href="doc_viewer/{{i}}/"> <h4 class="typetext"> {{i}} </h4> </a>
+
 </div>
 {% endfor %}
     </div>
 </body>
 </html>
+
+<style>
+
+
+</style>
