--- a/assets/dem/popup.css
+++ b/assets/dem/popup.css
@@ -57,3 +57,67 @@ justify-content:space-between;
 width :100%;
 margin:10px;
 }
+
+.doc-card{
+overflow-x:auto;
+ background-color: Transparent;
+  background-repeat:no-repeat;
+  border: none;
+}
+
+
+.app-drawer{
+/*display:flex;
+align-items:center;
+justify-content:space-around;
+height:50px;
+width:100%;
+margin-bottom:40px;*/
+
+margin-top:200px;
+display:flex;
+align-items:center;
+justify-content:space-around;
+height:70px;
+width:300px;
+padding:10px;
+margin-bottom:40px;
+display:flex;
+overflow-x:auto;
+
+
+}
+.app-drawer button : HOVER{
+/*height:50px;
+width:70px;
+border-radius:10px;*/
+transform:scale(1.1);
+}
+
+.app-drawer button{
+/*height:50px;
+width:70px;
+border-radius:10px;*/
+color:skyblue;
+ background-color: Transparent;
+  background-repeat:no-repeat;
+  border: none;
+
+}
+
+
+
+
+/* Mobile Devices */
+@media only screen and (max-width: 768px) {
+.doc-card::-webkit-scrollbar{
+width:0;
+}
+}
+
+/* Laptop and Tablets */
+@media only screen and (min-width: 769px) and (max-width: 1200px) {
+.doc-card::-webkit-scrollbar{
+width:10;
+}
+}
