--- a/assets/Aura_home/jarvis.css
+++ b/assets/Aura_home/jarvis.css
@@ -12,9 +12,13 @@ body, html {
   align-items: center;
   background:black;
 }
+.promptbar{
+font-size:10px;
+}
 
 
 .concentric-circles {
+
 background:yellow;
 }
 
@@ -26,11 +30,12 @@ background:yellow;
 }
 
 .circle:nth-child(1) {
-  width: 600px; /* Diameter of outer circle */
-  height: 600px;
+  width: 100px;
+  height: 100px;
   border: 20px solid black;
 
 }
+/* Diameter of outer circle */
 
 .circle:nth-child(2) {
   width: 250px; /* Diameter of outer circle */
@@ -47,7 +52,7 @@ animation: 2s ease 0s infinite normal none running processing;
 
 
 .loading_animation {
- animation: 5s ease 0s infinite normal none running rotateDonut;
+ animation: 2s ease 0s infinite normal none running rotateDonut;
 }
 
 @keyframes rotateDonut {
@@ -245,31 +250,29 @@ width:0;
 
 
 
+#expandableText {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    font-size: 16px;
+    border-top-left-radius:10px;
+    border-bottom-left-radius:10px;
+    border-bottom-right-radius:10px;
+    background-color: black;
+    color : white;
+    height:auto;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+#expandableText::-webkit-scrollbar{
+width:0px;
+}
 
 .prompt-button {
 display:flex;
 align-items:center;
 justify-content:space-around;
-height:50px;
+height:20px;
 width:100%;
-margin-bottom:40px;
+margin-bottom:2px;
 color:white;
-
 }
