--- a/Templates/home.html
+++ b/Templates/home.html
@@ -162,6 +162,7 @@ console.log('non recording');
       };
 
       recognition.onresult = (event) => {
+
         let interimTranscript = '';
         for (let i = event.resultIndex; i < event.results.length; ++i) {
           const transcript = event.results[i][0].transcript;
@@ -170,8 +171,13 @@ console.log('non recording');
           } else {
             interimTranscript += transcript;
           }
+          promptDiv.value = finalTranscript + interimTranscript;
+          textbox.style.height = "auto";
+let scheight = e.target.scrollHeight;
+textbox.style.height = `${scheight}px`;
         }
-        promptDiv.value = finalTranscript + interimTranscript;
+
+        // promptDiv.value = finalTranscript + interimTranscript;
       };
 
       recognition.onspeechend = () => {
